# docval

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: brazil_tax_id.rs
examples/validator/: brazil_tax_id.rs
src/: lib.rs
src/brazil/: tax_id.rs
tests/: brazil_tax_id_validator.rs
